<resources>
    <string name="app_name">Steamdroid</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="create_account_redirect">Create account</string>
    <string name="create_account">Create account</string>
    <string name="welcome_string">Welcome !</string>
    <string name="sign_in_string">Please login or create a new account to use the app.</string>
    <string name="text_en_bas_de_page"><u>Forgot your password</u></string>
    <string name="subscribe_label">Subscribe</string>
    <string name="subscribe_text_label">Please enter this information, so that your lists are saved.</string>
    <string name="username_label">Username</string>
    <string name="password_confirm_label">Confirm password</string>
    <string name="subscribe_button_label">Validate</string>
    <string name="password_error">Password not same</string>
    <string name="username_error">Username already exist</string>
    <string name="email_error">Email already exist</string>
    <string name="email_error_regex">Email not correct </string>
    <string name="password_error_regex">Password not correct</string>
    <string name="email_error_required">Email is required</string>
    <string name="password_error_required">Password is required</string>
    <string name="username_error_required">Username is required</string>
    <string name="forgot_password_string">Forgot your password</string>
    <string name="forgot_password_text">Please enter your email to reset your password</string>
    <string name="reset_action">Resend my password</string>
    <string name="home">Home</string>
    <string name="search_string">Search a game…</string>
    <string name="to_know_more">Find out more</string>
    <string name="c_est_vraiment_un_super_jeu">Really good game !</string>
    <string name="bestsellers"><u>The Bestsellers</u></string>
    <string name="game_details">Game details</string>
    <string name="search_label">Search</string>
    <string name="my_wishlist">My WishList</string>
    <string name="description">DESCRIPTION</string>
    <string name="review">REVIEW</string>
    <string name="my_favourites">My Likes</string>
    <string name="you_dont_have_any_likes_yet">You don t have any liked games yet.</string>
    <string name="you_dont_have_any_likes_yet_v2">Click on the heart to add.</string>
    <string name="you_dont_have_any_wishlist_yet">
        You haven\'t liked a game yet
    </string>
    <string name="you_dont_have_any_wishlist_yet_v2">
        Click on the star to add.
    </string>
    <string name="like_button_success">Added to favorites</string>
    <string name="like_button_delete">Removed from favorites</string>
    <string name="wishlist_button_success">Added to your wishlist</string>
    <string name="wishlist_button_delete">Removed from wishlist</string>
    <string name="close_search">close_search</string>
    <string name="close_fav">close_fav</string>
    <string name="empty_likes">empty_likes</string>
    <string name="back_game_details">back_game_details</string>
    <string name="back_ground">back_ground</string>
    <string name="error_server">Error Servor, please try again</string>
    <string name="error_empty_signin">Please fill in all fields</string>
    <string name="error_empty_auth">Authentication failed</string>
    <string name="lang">english</string>
    <string name="currency">us</string>
</resources>