<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/google_sans_bold"
            android:gravity="center"
            android:text="@string/welcome_string"
            android:textColor="@color/white"
            android:textSize="43sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/proxima_nova_font"
            android:gravity="center"
            android:text="@string/sign_in_string"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_border_rounded"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/placeholder"
        android:textColorHint="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_border_rounded"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="center"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/placeholder"
        android:textColorHint="@color/white" />

    <ProgressBar
        android:id="@+id/progressBarWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_border_rounded"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/login_button_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/create_account_redirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_border_rounded_transparent"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/create_account_redirect"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_font"
            android:text="@string/text_en_bas_de_page"
            android:textColor="@color/forget"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>