<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        card_view:cardElevation="10dp">

        <!-- Contenu de la carte -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/image_view_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="16dp"
                android:src="@drawable/like" />

            <ImageView
                android:id="@+id/image_view_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="16dp"
                android:src="@drawable/whishlist" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:background="@drawable/input_border_rounded"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:fontFamily="@font/proxima_nova_font"
        android:gravity="start"
        android:hint="@string/search_string"
        android:inputType="text"
        android:focusable="false"
        android:padding="15dp"
        android:textColor="@color/placeholder"
        android:textColorHint="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/bgtitan"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_titan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/proxima_nova_font"
                android:text="Titan Fall 2"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/proxima_nova_font"
                android:text="@string/c_est_vraiment_un_super_jeu"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_border_rounded"
                android:fontFamily="@font/proxima_nova_font"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/to_know_more"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_titan"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="16dp"
                android:layout_marginTop="140dp"
                android:src="@drawable/titan" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/proxima_nova_font"
        android:text="@string/bestsellers"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" />

    <ProgressBar
        android:id="@+id/progressBarHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
