<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="48dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:layout_margin="10dp"
            android:contentDescription="@string/back_game_details" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/game_details"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">
            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:contentDescription="@string/back_ground" />
            <ImageView
                android:id="@+id/whishlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:contentDescription="@string/back_ground" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:id="@+id/game_background"
            android:scaleType="fitXY"
            android:contentDescription="@string/back_ground">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="-40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/backGroundImgTitle">
            <ImageView
                android:id="@+id/gameIcon"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/back_ground">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/gameName"
                    android:fontFamily="@font/google_sans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry">
                </TextView>
                <TextView
                    android:id="@+id/editorName"
                    android:fontFamily="@font/google_sans_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:layout_marginTop="3dp"
                    android:textSize="10sp"
                    tools:ignore="RtlSymmetry,SmallSp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/description"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textSize="15sp"
                android:fontFamily="@font/google_sans_bold"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:topRightRadius="0dp"
                android:bottomRightRadius="0dp"
                android:background="@drawable/button_border_rounded_game_description"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/review"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:text="@string/review"
                android:textSize="15sp"
                android:fontFamily="@font/google_sans_bold"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:background="@drawable/btn_border_rounded_transparent_game_review"
                android:textColor="@color/white"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/gameDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:visibility="visible"
                android:scrollbars="vertical"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/google_sans_regular"
                tools:ignore="SmallSp">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>